--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hello, I’m Juarez Junior, <mark>Azure Developer Engagement Lead</mark> at Microsoft. Previously, a <mark>Principal Developer Advocate - Blockchain</mark> at Oracle and, <mark>Thought Leader and Technical Evangelist</mark> at IBM.
+  Hello, I’m Juarez Junior, Azure Developer Engagement Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle and, Thought Leader and Technical Evangelist at IBM.
 
   My current interests are: Blockchain, IoT, Hyperledger, Ethereum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, SolutionsArchitecture, SoftwareArchitecture, Startups, Emerging Technologies.
 
@@ -82,7 +82,7 @@ content:
         sub_title: Azure Developer Engagement Lead
         caption: July 2010 - Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          https://developer.microsoft.com/en-ie/
         description: | # this will include new lines to allow paragraphs
             Developer Engagement and Relations Lead. I oversee all the developer outreach activities including developer marketing programs, customer and social media interactions, online and in-person events like webinars, technical workshops, conferences, hackathons, training and certification events, and local meetups, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides as well as events organization and promotion.
 
@@ -100,7 +100,7 @@ content:
 
       #    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
-  - title: Hightlights
+  - title: Highlights
     layout: text
     content: | # this will include new lines to allow paragraphs
       Awards, technical certifications, diplomas and courses:
@@ -108,10 +108,10 @@ content:
       - IBM Redbooks Author      
       - [Developer Advocacy - Talks](https://sessionize.com/juarezjunior)
         
-      ![Trees](/modern-resume-theme/images/Juarez-Photo-2.jpg "Juarez Junior")
+      ![Talks](images/Juarez-Photo-2.jpg "Juarez Junior")
 
 # Footer
-footer_show_references: true
+footer_show_references: false
 # references_title: References on request (Override references text)
 
 # Build settings
