--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Juarez Barbosa Junior
-title: Azure Developer Engagement Lead
+title: Azure Developer Engagement Lead - Microsoft
 email: juarez.barbosa@gmail.com
 website: https://juarezjunior.github.io/
 
