--- a/_config.yml
+++ b/_config.yml
@@ -86,17 +86,37 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       Awards, technical certifications, diplomas and courses:
-      - IBM Mobile Thought Leader and Technical Evangelist
-      - IBM Redbooks Author      
-      - [Developer Advocacy - Sessionize](https://sessionize.com/juarezjunior)      
+      - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
+      - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
+            
   
   - title: Talks
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Developer and customer engagement talks:     
-      - [Azure Blockchain Zürich - Introduction to Blockchain and Blockchain on Azure](https://info.microsoft.com/WE-DevOps-WBNR-FY21-11Nov-20-MicrosoftDevOpsForum-SRDEM47846_LP02OnDemandRegistration-ForminBody.html)
+      Developer and customer engagement talks:
+      - [Developer Advocacy - Sessionize](https://sessionize.com/juarezjunior)
+      - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.microsoftevents.com/profile/web/index.cfm?PKwebID=0x1462051d571&varPage=agenda)
+      - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
+      - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
+      - [Workshop: Blockchain on Azure for Developers](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x9650633abcd)
+      - [Hackathon WhatTheHack - Blockchain and The World Food Supply](https://www.slideshare.net/juarezjunior/whatthehack-blockchain-and-the-world-food-supply)
+      - [Rio Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
+      - [Azure Thursdays - Azure Block Chain Service for Developers](https://www.youtube.com/watch?v=9JsNx_4n11U)    
+      - [Limerick .NET Azure Meetup - Microsoft Developers in Ireland](https://twitter.com/ActionPointTech/status/1187425718495567874)         
+      - [Cork .NET Azure Meetup - Azure Blockchain Service for Developers](https://www.youtube.com/watch?v=w5744nDwu0E)    
+      - [Sec4Dev - Panel: Cloud Security](https://sec4dev.io/sessions/breakout-sessions-secure-sdlc-security-automation-cloud-security)
+      - [Azure Blockchain Zürich - Introduction to Blockchain and Blockchain on Azure](https://info.microsoft.com/WE-DevOps-WBNR-FY21-11Nov-20-MicrosoftDevOpsForum-SRDEM47846_LP02OnDemandRegistration-ForminBody.html) 
+      - [Azure Blockchain Zürich - CORDA on Azure](https://www.meetup.com/Azure-Blockchain-Zurich/events/rkbkhryzpblc/)           
+      - [World Blockchain Conclave - Introduction to Blockchain and Blockchain on Azure](https://1point21gws.com/onlineblockchainsummit/index.php#schedule)
+      - [Descomplicando o Azure - Enterprise Blockchain Application Development using the Azure Blockchain Service](https://www.descomplicandoazure.com.br/)      
       - [Microsoft DevOps Forum - DevOps with GitHub](https://info.microsoft.com/WE-DevOps-WBNR-FY21-11Nov-20-MicrosoftDevOpsForum-SRDEM47846_LP02OnDemandRegistration-ForminBody.html)
+      - [Pyjamas Conf 2020 - Blockchain for Python Developers](https://www.youtube.com/watch?v=9lMXZALF-iU)
+      - [4th Naftemporiki AI Conference 2019 - Panel: Artificial Intelligence vs. Human Prudence](https://www.flickr.com/photos/15201803@N00/albums/72157678467257638)
       - [Shift Conference - Devops with Azure Devops and Github](https://www.slideshare.net/shiftconf/shift-remote-devops-devops-with-azure-devops-and-github-juarez-junior-microsoft)
+      - [DUBJUG - The Helidon.io Project - The Collection of Java Libraries for Writing Microservices](https://ti.to/dublin-java-user-group/oracle-blockchain)
+      - [DUBJUG - The Oracle Blockchain Cloud Service and Blockchain smart contracts development with Java](https://ti.to/dublin-java-user-group/oracle-blockchain)
+      - [Webinars: Transformational Technologies of Today – Blockchain and IoT](https://www.linkedin.com/pulse/transformational-technologies-today-blockchain-iot-juarez-junior/)
+      - [JavaRanch Forum](https://coderanch.com/u/27811/Juarez-Alvares-Barbosa-Junior)
           
 # Footer
 footer_show_references: false
