--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ content:
       Awards, technical certifications, diplomas and courses:
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
-            
+      - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
   
   - title: Talks
     layout: text
@@ -103,22 +103,37 @@ content:
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
       - [Workshop: Blockchain on Azure for Developers](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x9650633abcd)
       - [Hackathon WhatTheHack - Blockchain and The World Food Supply](https://www.slideshare.net/juarezjunior/whatthehack-blockchain-and-the-world-food-supply)
+      - [Microsoft Developers @ NodeConf Remote 2020](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2020/)
+      - [Open Source Lisbon - The Trinity in Exponential Technologies: Open Source, Blockchain and Microsoft Azure](https://www.youtube.com/watch?v=CmKYDAO2DMQ&t=26s)
       - [Rio Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
       - [Azure Thursdays - Azure Block Chain Service for Developers](https://www.youtube.com/watch?v=9JsNx_4n11U)    
       - [Limerick .NET Azure Meetup - Microsoft Developers in Ireland](https://twitter.com/ActionPointTech/status/1187425718495567874)         
       - [Cork .NET Azure Meetup - Azure Blockchain Service for Developers](https://www.youtube.com/watch?v=w5744nDwu0E)    
-      - [Sec4Dev - Panel: Cloud Security](https://sec4dev.io/sessions/breakout-sessions-secure-sdlc-security-automation-cloud-security)
+      - [Sec4Dev - Panel: Cloud Security and Breakout Sessions](https://sec4dev.io/sessions/breakout-sessions-secure-sdlc-security-automation-cloud-security)
       - [Azure Blockchain Zürich - Introduction to Blockchain and Blockchain on Azure](https://info.microsoft.com/WE-DevOps-WBNR-FY21-11Nov-20-MicrosoftDevOpsForum-SRDEM47846_LP02OnDemandRegistration-ForminBody.html) 
-      - [Azure Blockchain Zürich - CORDA on Azure](https://www.meetup.com/Azure-Blockchain-Zurich/events/rkbkhryzpblc/)           
+      - [Azure Blockchain Zürich - CORDA on Azure](https://www.meetup.com/Azure-Blockchain-Zurich/events/rkbkhryzpblc/)
+      - [Azure Blockchain Zürich - CORDA on Azure - Social](https://www.linkedin.com/feed/update/urn:li:activity:6600515125298372609/)
+      - [Blockchain Series - Introduction to Blockchain and Blockchain on Azure](https://www.youtube.com/watch?v=hPZl75H_794) 
+      - [Blockchain Series - Quorum on Azure Blockchain](https://www.youtube.com/watch?v=16jAb6j2uSk) 
+      - [Blockchain Series - Hyperledger on Azure Blockchain](https://www.youtube.com/watch?v=3iCSU8kHZkI) 
+      - [Cloud Conference Day - Introduction to Azure Spring Cloud](https://www.linkedin.com/feed/update/urn:li:activity:6783021199669637120/) 
+      - [One Hackathon - Judges Panel](https://www.incubateind.com/hack/onehack/portugalandUkraine)
+      - [Blockchain SIG - Oracle EMEA](https://www.linkedin.com/feed/update/urn:li:activity:6400694651598233600/)
+      - [Blockchain Summit - Blockchain Smart Contracts Development with the Oracle Blockchain Platform](https://www.techconnect-live.com/agendax/sem-block.pdf)        
       - [World Blockchain Conclave - Introduction to Blockchain and Blockchain on Azure](https://1point21gws.com/onlineblockchainsummit/index.php#schedule)
       - [Descomplicando o Azure - Enterprise Blockchain Application Development using the Azure Blockchain Service](https://www.descomplicandoazure.com.br/)      
       - [Microsoft DevOps Forum - DevOps with GitHub](https://info.microsoft.com/WE-DevOps-WBNR-FY21-11Nov-20-MicrosoftDevOpsForum-SRDEM47846_LP02OnDemandRegistration-ForminBody.html)
       - [Pyjamas Conf 2020 - Blockchain for Python Developers](https://www.youtube.com/watch?v=9lMXZALF-iU)
+      - [Startup Weekend Ireland - Fight COVID Hackathon](https://www.youtube.com/watch?v=Cx-EqEZMl_c&t=393s)
       - [4th Naftemporiki AI Conference 2019 - Panel: Artificial Intelligence vs. Human Prudence](https://www.flickr.com/photos/15201803@N00/albums/72157678467257638)
       - [Shift Conference - Devops with Azure Devops and Github](https://www.slideshare.net/shiftconf/shift-remote-devops-devops-with-azure-devops-and-github-juarez-junior-microsoft)
       - [DUBJUG - The Helidon.io Project - The Collection of Java Libraries for Writing Microservices](https://ti.to/dublin-java-user-group/oracle-blockchain)
       - [DUBJUG - The Oracle Blockchain Cloud Service and Blockchain smart contracts development with Java](https://ti.to/dublin-java-user-group/oracle-blockchain)
+      - [LeedsJUG - The Helidon.io Project - The Collection of Java Libraries for Writing Microservices](https://twitter.com/LeedsJUG/status/1069697969769852935)
+      - [LeedsJUG - The Oracle Blockchain Cloud Service and Blockchain smart contracts development with Java](https://twitter.com/LeedsJUG/status/1088451342547308544)
       - [Webinars: Transformational Technologies of Today – Blockchain and IoT](https://www.linkedin.com/pulse/transformational-technologies-today-blockchain-iot-juarez-junior/)
+      - [CONADEV - Situação e Perspectivas Tecnologias Mobile](https://www.youtube.com/watch?v=Qs8JrDFYDow)
+      - [MGJUG - S60 para Java - MSA e Java ME em Smartphones](https://www.guj.com.br/t/mgjug-tech-meeting-evento-gratuito-em-bh/254261)
       - [JavaRanch Forum](https://coderanch.com/u/27811/Juarez-Alvares-Barbosa-Junior)
           
 # Footer
