--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,11 @@ content:
       - [Microsoft DevOps Forum - DevOps with GitHub](https://info.microsoft.com/WE-DevOps-WBNR-FY21-11Nov-20-MicrosoftDevOpsForum-SRDEM47846_LP02OnDemandRegistration-ForminBody.html)
       - [Pyjamas Conf 2020 - Blockchain for Python Developers](https://www.youtube.com/watch?v=9lMXZALF-iU)
       - [Startup Weekend Ireland - Fight COVID Hackathon](https://www.youtube.com/watch?v=Cx-EqEZMl_c&t=393s)
+      - [Oracle Code Explore Warsaw - Blockchain for Developers](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x611231abcd)
+      - [Oracle Blocktoberfest London - Oracle Autonomous Blockchain Cloud Service](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x579007abcd)
+      - [Workshop Instructor @ Oracle Blockchain Hackathon Switzerland](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x543914abcd)
+      - [Oracle Higher Education & Research Technology Summit - Blockchain, AI, Machine Learning](https://www.eventbrite.co.uk/e/oracle-higher-education-research-technology-summit-tickets-59518601740?#)
+      - [Oracle Blockchain Experience Day - Developing Blockchain Applications](https://www.eventbrite.ie/e/oracle-blockchain-experience-day-tickets-61525581671#)
       - [4th Naftemporiki AI Conference 2019 - Panel: Artificial Intelligence vs. Human Prudence](https://www.flickr.com/photos/15201803@N00/albums/72157678467257638)
       - [Shift Conference - Devops with Azure Devops and Github](https://www.slideshare.net/shiftconf/shift-remote-devops-devops-with-azure-devops-and-github-juarez-junior-microsoft)
       - [DUBJUG - The Helidon.io Project - The Collection of Java Libraries for Writing Microservices](https://ti.to/dublin-java-user-group/oracle-blockchain)
