--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ content:
       Awards, technical certifications, diplomas and courses:
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
+      - [Irish Government Blockchain Hackathon](https://www.youtube.com/watch?v=MRTzLKNPq14)
       - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [JavaRanch Forum](https://coderanch.com/u/27811/Juarez-Alvares-Barbosa-Junior)
   
@@ -106,7 +107,8 @@ content:
       - [Hackathon WhatTheHack - Blockchain and The World Food Supply](https://www.slideshare.net/juarezjunior/whatthehack-blockchain-and-the-world-food-supply)
       - [Microsoft Developers @ NodeConf Remote 2020](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2020/)
       - [Open Source Lisbon - The Trinity in Exponential Technologies: Open Source, Blockchain and Microsoft Azure](https://www.youtube.com/watch?v=CmKYDAO2DMQ&t=26s)
-      - [Rio Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
+      - [Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
+      - [Cloud Conference Day - Introduction to Azure Spring Cloud](https://www.linkedin.com/feed/update/urn:li:activity:6783021199669637120/)
       - [Azure Thursdays - Azure Block Chain Service for Developers](https://www.youtube.com/watch?v=9JsNx_4n11U)    
       - [Limerick .NET Azure Meetup - Microsoft Developers in Ireland](https://twitter.com/ActionPointTech/status/1187425718495567874)         
       - [Cork .NET Azure Meetup - Azure Blockchain Service for Developers](https://www.youtube.com/watch?v=w5744nDwu0E)    
@@ -117,8 +119,7 @@ content:
       - [Blockchain Series - Introduction to Blockchain and Blockchain on Azure](https://www.youtube.com/watch?v=hPZl75H_794) 
       - [Blockchain Series - Quorum on Azure Blockchain](https://www.youtube.com/watch?v=16jAb6j2uSk) 
       - [Blockchain Series - Hyperledger on Azure Blockchain](https://www.youtube.com/watch?v=3iCSU8kHZkI) 
-      - [Blockchain Ireland - Developer's Working Group - Introduction to Blockchain and Blockchain on Azure](https://www.linkedin.com/feed/update/urn:li:activity:6778341966645145600/)
-      - [Cloud Conference Day - Introduction to Azure Spring Cloud](https://www.linkedin.com/feed/update/urn:li:activity:6783021199669637120/) 
+      - [Blockchain Ireland - Developer's Working Group - Introduction to Blockchain and Blockchain on Azure](https://www.linkedin.com/feed/update/urn:li:activity:6778341966645145600/)      
       - [One Hackathon - Judges Panel](https://www.incubateind.com/hack/onehack/portugalandUkraine)
       - [Blockchain SIG - Oracle EMEA](https://www.linkedin.com/feed/update/urn:li:activity:6400694651598233600/)
       - [Blockchain Summit - Blockchain Smart Contracts Development with the Oracle Blockchain Platform](https://www.techconnect-live.com/agendax/sem-block.pdf)        
