--- a/_config.yml
+++ b/_config.yml
@@ -88,17 +88,18 @@ content:
   - title: Highlights
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Awards, technical certifications, diplomas and courses:
+      Awards, technical certifications, diplomas and courses:  
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
       - [Irish Government Blockchain Hackathon](https://www.youtube.com/watch?v=MRTzLKNPq14)
       - [IBM Technical Rock Star for IBM Cloud](https://www.flickr.com/photos/15201803@N00/29191132794/in/photostream/)
+      - [IBM Manager's Choice Award - 2016](https://www.linkedin.com/in/jujunior/detail/treasury/position:721362750/?entityUrn=urn%3Ali%3Afsd_profileTreasuryMedia%3A(ACoAAAQidAUBnh75F9ppFfR96-YkDay_Szo1rkk%2C1476440442096)&section=position%3A721362750&treasuryCount=3)
+      - [IBM Eminence and Performance Awards - IBM Technical Rockstar for Cloud & IBM Manager's Choice Award](https://www.linkedin.com/in/jujunior/detail/treasury/position:721362750/?entityUrn=urn%3Ali%3Afsd_profileTreasuryMedia%3A(ACoAAAQidAUBnh75F9ppFfR96-YkDay_Szo1rkk%2C1485950401575)&section=position%3A721362750&treasuryCount=3)
+      - [IBM - Technical Residency RTP USA - Mobile Enterprise Social Media Residency](https://www.flickr.com/photos/15201803@N00/8549638887/in/photostream)     
       - [Nokia Developer Champion - 2006 - 2007](https://www.flickr.com/photos/15201803@N00/8550741480/in/set-72157632977371930)
       - [Nokia Developer Champion - 2007 - 2008](https://www.flickr.com/photos/15201803@N00/8549640289/in/set-72157632977371930)
       - [Nokia Developer Champion - 2008 - 2009](https://www.flickr.com/photos/15201803@N00/8549641595/in/set-72157632977371930)
       - [Nokia Developer Champion - 2009 - 2010](https://www.flickr.com/photos/15201803@N00/8549646971/in/set-72157632977371930)
-      - [Eminence and Performance Awards - IBM Technical Rockstar for Cloud & IBM Manager's Choice Award](https://www.linkedin.com/in/jujunior/detail/treasury/position:721362750/?entityUrn=urn%3Ali%3Afsd_profileTreasuryMedia%3A(ACoAAAQidAUBnh75F9ppFfR96-YkDay_Szo1rkk%2C1485950401575)&section=position%3A721362750&treasuryCount=3)
-      - [IBM - Technical Residency - RTP USA - Mobile Enterprise Social Media Residency](https://www.flickr.com/photos/15201803@N00/8549638887/in/photostream)
       - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [JavaRanch Forum](https://coderanch.com/u/27811/Juarez-Alvares-Barbosa-Junior)
   
