--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,11 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       Awards - Developer Relations, Solutions Architecture, Software Architecture and Engineering 
+      - [Microsoft- Event Speaker Gold](https://www.credly.com/badges/00190609-ed83-413e-a337-9bdc87db1112)
+      - [Microsoft - Event Speaker Silver](https://www.credly.com/badges/87e92b22-3c04-4332-8d3e-82eec922da2d)
+      - [Microsoft OpenHack - DevOps](https://www.credly.com/badges/63ce96f3-9a31-47b6-bbe0-4f8bfe1f6ff3)
+      - [Microsoft OpenHack - IoT Operations Gateway](https://www.credly.com/badges/6d4af926-08bf-409a-aa9a-54f0653070b9)
+      - [Microsoft OpenHack - Modern Data Warehousing](https://www.credly.com/badges/f27c83fb-1f1a-4d2f-a8c6-9326eb6ca87d)  
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
       - [Irish Government Blockchain Hackathon](https://www.youtube.com/watch?v=MRTzLKNPq14)
