--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ content:
       - [Startup Weekend Ireland - Fight COVID Hackathon](https://www.youtube.com/watch?v=Cx-EqEZMl_c&t=393s)
       - [Oracle Code Explore Warsaw - Blockchain for Developers](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x611231abcd)
       - [Oracle Blocktoberfest London - Oracle Autonomous Blockchain Cloud Service](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x579007abcd)
-      - [Workshop Instructor @ Oracle Blockchain Hackathon Switzerland](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x543914abcd)
+      - [Instructor - Hyperledger Workshop @ Oracle Blockchain Hackathon Switzerland](https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x543914abcd)
       - [Oracle Higher Education & Research Technology Summit - Blockchain, AI, Machine Learning](https://www.eventbrite.co.uk/e/oracle-higher-education-research-technology-summit-tickets-59518601740?#)
       - [Oracle Blockchain Experience Day - Developing Blockchain Applications](https://www.eventbrite.ie/e/oracle-blockchain-experience-day-tickets-61525581671#)
       - [4th Naftemporiki AI Conference 2019 - Panel: Artificial Intelligence vs. Human Prudence](https://www.flickr.com/photos/15201803@N00/albums/72157678467257638)
