--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ content:
       - [Blockchain Series - Hyperledger on Azure Blockchain](https://www.youtube.com/watch?v=3iCSU8kHZkI) 
       - [Blockchain Ireland - Developer's Working Group - Introduction to Blockchain and Blockchain on Azure](https://www.linkedin.com/feed/update/urn:li:activity:6778341966645145600/)      
       - [One Hackathon - Judges Panel](https://www.incubateind.com/hack/onehack/portugalandUkraine)
-      - [Blockchain SIG - Oracle EMEA](https://www.linkedin.com/feed/update/urn:li:activity:6400694651598233600/)
+      - [Organizer - Blockchain SIG - Oracle EMEA](https://www.linkedin.com/feed/update/urn:li:activity:6400694651598233600/)
       - [Blockchain Summit - Blockchain Smart Contracts Development with the Oracle Blockchain Platform](https://www.techconnect-live.com/agendax/sem-block.pdf)        
       - [World Blockchain Conclave - Introduction to Blockchain and Blockchain on Azure](https://1point21gws.com/onlineblockchainsummit/index.php#schedule)
       - [Descomplicando o Azure - Enterprise Blockchain Application Development using the Azure Blockchain Service](https://www.descomplicandoazure.com.br/)      
