--- a/_config.yml
+++ b/_config.yml
@@ -287,9 +287,11 @@ content:
       - [IBM - Competing Against AWS and Azure](https://www.flickr.com/photos/15201803@N00/34236642633/in/dateposted-public/)
       - [IBM - Coding for the Cloud](https://www.flickr.com/photos/15201803@N00/34203467684/in/dateposted-public/) 
       - [IBM - Edge IoT Computing - Where data comes Alive!](https://www.flickr.com/photos/15201803@N00/34236642583/in/dateposted-public/) 
+      - [IBM - Breaking IoT - The Internet of Trust - or Don't Believe Everything your sensor tells you](https://www.flickr.com/photos/15201803@N00/35047465515/in/dateposted-public/)
       - [IBM - How to connect everything to Watson IoT Platform](https://www.flickr.com/photos/15201803@N00/34236642583/in/dateposted-public/)
       - [IBM - Bringing Chatbots to Life for your Clients](https://www.flickr.com/photos/15201803@N00/34236642583/in/dateposted-public/)
-      
+      - [IBM - Cloud IaaS - Aquisição Softlayer](https://www.flickr.com/photos/15201803@N00/29706180462/in/dateposted-public/)
+      - [IBM - Creating Secure Software](https://www.flickr.com/photos/15201803@N00/29706180612/in/dateposted-public/)
 
           
 # Footer
